SigmaCodebackup3rdSep/objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <label>Location Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <label>Location City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Description__c</fullName>
        <label>Location Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <label>Location State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Truck</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Package Location</fullName>
                </value>
                <value>
                    <fullName>Receiving Location</fullName>
                </value>
                <value>
                    <fullName>Waste Management Location</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Location</fullName>
                </value>
                <value>
                    <fullName>Storage Location</fullName>
                </value>
                <value>
                    <fullName>Shipping Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Zipcode__c</fullName>
        <label>Location Zipcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Stationary__c</fullName>
        <label>Mobile/Stationery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Stationery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Sub Locations</relationshipLabel>
        <relationshipName>Sub_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Warehouse Locations</relationshipLabel>
        <relationshipName>WarehouseManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse_Mgr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Location_Name__c</columns>
        <columns>Location_Type__c</columns>
        <columns>NAME</columns>
        <columns>Parent_Location__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Location Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>